feat(control): sonarlint suggestions